antes de meterle condiciones

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <title>Rick & Morty</title>
@@ -8,9 +7,14 @@
     <link rel="stylesheet" href="assets/styles.css">
   </head>
   <body>
-    <section id=cards>
+    <div class="divisor">
 
-    </section>
+      <section id=cards>
+      </section>
+
+    </div>
+
+
     <script src="assets/scripts.js" ></script>
   </body>
 </html>
